--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,35 @@
-:root {
-    --primary-color: #42A5F5;
-    --secondary-color: #66BB6A;
-    --text-color: #333;
+/* index.css */
+
+/* Asegura que el body y el contenedor principal ocupen el 100% del viewport */
+html,
+body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 body {
     font-family: 'Roboto', sans-serif;
     color: var(--text-color);
     background-color: #f5f5f5;
-    margin: 0;
-    padding: 0;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5 {
-    color: var(--primary-color);
+/* Contenedor principal que incluye el contenido de la página */
+#root {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    /* Para que el contenido crezca y ocupe el espacio disponible */
+}
+
+/* El footer siempre estará al final */
+footer {
+    background-color: var(--primary-color);
+    color: white;
+    padding: 1rem;
+    text-align: center;
+    margin-top: auto;
+    /* Empuja el footer hacia el final */
 }
