--- a/src/shared/components/Footer/FooterComponent.css
+++ b/src/shared/components/Footer/FooterComponent.css
@@ -3,6 +3,9 @@
     background-color: var(--primary-color);
     color: white;
     padding: 2rem 1rem;
+    text-align: center;
+    margin-top: auto;
+    /* Este ajuste asegura que el footer esté siempre al final */
 }
 
 .footer h4 {
@@ -26,4 +29,10 @@
 
 .footer-links a:hover {
     text-decoration: underline;
+}
+
+@media (max-width: 768px) {
+    .footer {
+        padding: 1rem;
+    }
 }
